force-app/main/default/objects/leaseworks__Entity__c/leaseworks__Entity__c.object-meta.xml
<CustomObject>
    <description>Captures the legal business name or a recognizable identifier in a financial transaction.An entity typically refers to any organization or economic unit that exists independently, with its own separate financial records and transactions. It could be a company, partnership, corporation, nonprofit organization, government agency, or any other legally recognized entity. An entity is the business or organization to which the transaction and associated jouyrnal entries are related.
Population Requirement Details: Conditionally Required if accounting is turned ON
[MODULE: Finance]
[LOAD: Optional]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Entity</label>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>