force-app/main/default/objects/leaseworks__Entity__c/fields/leaseworks__Entity_Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Entity_Description__c</fullName>
    <label>Entity Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>