force-app/main/default/objects/leaseworks__Entity__c/fields/leaseworks__Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Entity_Type__c</fullName>
    <label>Entity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posting</fullName>
            </value>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>