force-app/main/default/objects/leaseworks__Entity__c/fields/leaseworks__Inactive__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, this entity will be excluded from future selections on leases, bank and any transaction.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>