force-app/main/default/objects/leaseworks__Entity__c/fields/leaseworks__Intercompany_Receivable_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Intercompany_Receivable_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Example: If Entity A is owed money from Entity B, then an Intercompany Receivable is recorded. In this example, Entity A would book a journal entry debiting Intercompany AR with Entity B as the intercompany affiliate tag. The GL account used for the journal entry debit would be the GL account mapped to this field. Logic: The journal entry debit line looks up the intercompany receivable account associated with the Intercompany Affiliate entity tagged on the journal line. The Intercompany AR account it looks up is this field.</description>
    <inlineHelpText>Select the intercompany accounts receivable GL Account when this entity is an intercompany affiliate on a journal entry.</inlineHelpText>
    <label>Intercompany Affiliate AR GL Account</label>
    <referenceTo>leaseworks__Chart_Of_Accounts__c</referenceTo>
    <relationshipLabel>Entity (Intercompany Receivable GL Account)</relationshipLabel>
    <relationshipName>Entity1</relationshipName>
    <type>Lookup</type>
</CustomField>