force-app/main/default/objects/leaseworks__Entity__c/fields/leaseworks__Parent_Entity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Parent_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Entity__c.leaseworks__Entity_Type__c</field>
            <operation>equals</operation>
            <value>Hierarchy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Entity__c</referenceTo>
    <relationshipLabel>Entity</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>