force-app/main/default/objects/leaseworks__Entity__c/fields/leaseworks__Phone__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>