force-app/main/default/objects/leaseworks__Entity__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Entity_Description__c</columns>
    <columns>leaseworks__Entity_Type__c</columns>
    <columns>leaseworks__Parent_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>